<resources>

    <string name="app_name">CatchCar</string>
    <string name="city">Tỉnh/TP</string>
    <string name="fromPlace">Điểm đi</string>
    <string name="toPlace">Điểm đến</string>
    <string name="district">Quận/Huyện</string>
    <string name="search">Tìm chuyến xe</string>
    <string name="so_luong_ket_qua">Số lượng kết quả</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="repassword">Confirm</string>
    <string name="gmap">Gmap</string>
    <string name="tim_kiem_chuyen_xe">Tìm kiếm chuyến xe</string>
    <string name="dang_tin">Đăng tin</string>
    <string name="chat">Chat</string>
    <string name="quan_ly_tai_khoan">Quản lý Tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="huong_dang">Hướng dẫn</string>
    <string name="chuyen_di">Chuyến đi</string>
    <string name="di_nho">Đi nhờ</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="ca_nhan">Thông tin Cá nhân</string>
    <string name="thong_tin_xe">Thông tin xe</string>
    <string name="spinner_title">Chọn một xe</string>

</resources>