<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#ffffff"
    android:gravity="center|center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/green" />

            <TextView
                android:id="@+id/tvFromPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromPlace"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/tvFromCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/atTvFromPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Hà Nội"
                android:inputType="textFilter"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/tvFromDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/district"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/atTvFromDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Thanh Xuân"
                android:inputType="textFilter"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/red" />

            <TextView
                android:id="@+id/tvToPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toPlace"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/tvToCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/atTvToPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Hà Nội"
                android:inputType="textFilter"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/tvToDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/district"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/atTvToDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Thanh Xuân"
                android:inputType="textFilter"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thời gian"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ngày đi" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:hint="" >
            </EditText>

            <ImageButton
                android:id="@+id/btDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Giờ đi" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:gravity="center"
                android:hint="" >
            </EditText>

            <ImageButton
                android:id="@+id/btTime"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/clock" />
        </LinearLayout>
        <ImageView
            android:id="@+id/btSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

</LinearLayout>